[package]
name = "ray-tracing-iow"
version = "0.1.0"
authors = ["Christophe da Silva <christophe.dasilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
rand = "0.8.3"